[project]
name = "ezcomp"
version = "0.1.0"
description = "Interactive side-by-side quality comparison of two video files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.1",
    "python-mpv>=1.0.8",
]

[project.scripts]
ezcomp = "ezcomp.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezcomp"]
